<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_mn_home"
        android:title="@string/home"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mn_geofence"
        android:title="@string/geofence"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mn_spots"
        android:title="@string/spots"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mn_graphs"
        android:title="@string/charts"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mn_profile"
        android:title="@string/profile"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mn_search"
        android:title="@string/search"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>