<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:onClick="onProfileButtonClick" />

    <Button
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:onClick="onFollowButtonClick" />

    <Button
        android:id="@+id/unfollow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfollow"
        android:visibility="gone"
        android:onClick="onUnfollowButtonClick" />
</LinearLayout>
